@@ -1,3 +1,5 @@
+HEAD
+        + Fixed printable strings in interface view
 1.3.12
 	+ Add page title
 1.3.11
